# gk

./: .env.example  .gitignore  .mcp.json  majors_data.json  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json  vitest.config.ts
.githooks/: pre-commit
data/: 92_list.csv
data/output/: 上海交通大学.json  上海体育大学.json  上海大学.json  上海海洋大学.json  上海科技大学.json  上海财经大学.json  上海音乐学院.json  东北大学.json  东北师范大学.json  东北林业大学.json  东华大学.json  东南大学.json  中南大学.json  中南财经政法大学.json  中国人民公安大学.json  中国人民大学.json  中国传媒大学.json  中国农业大学.json  中国地质大学（武汉）.json  中国政法大学.json  中国海洋大学.json  中国石油大学（华东）.json  中国矿业大学.json  中国矿业大学（北京）.json  中国科学院大学.json  中国美术学院.json  中国药科大学.json  中国音乐学院.json  中央民族大学.json  中央音乐学院.json  中山大学.json  云南大学.json  内蒙古大学.json  北京中医药大学.json  北京交通大学.json  北京体育大学.json  北京化工大学.json  北京协和医学院.json  北京外国语大学.json  北京大学.json  (+78 more)
scripts/: crawl-gaokao-direct.py  crawl-gaokao-mcp.py  crawl-gaokao.py  fix-missing-titles.py  mcp-json-filter.py
src/gk/: __init__.py  __main__.py  agent.py  cli.py  config.py  crawler.py  env.py  examples.py  models.py  playwright_session.py
src/gk/prompts/: __init__.py  crawl.yml
tests/: test_agent.py  test_crawler.py  test_examples.py  test_playwright_session.py
web/: README.md  mobile.spec.ts  next.config.ts  package.json  pnpm-lock.yaml  tdd-animations.spec.ts  tdd-major-satisfaction.spec.ts  tdd-majors-polish.spec.ts  tdd-majors.spec.ts  tdd-motion.spec.ts  tdd-ui-polish.spec.ts
web/data/: schools-coords.json
web/public/data/: crawl-runs.json  crawl-sources.json  (+1 more)
web/scripts/: export-crawl-data.ts  generate-data.ts  geocode-schools.ts
(+37 files in other folders)
