[project]
name = "gk"
version = "0.1.0"
description = "基于 Claude Agent SDK 的智能体示例项目"
readme = "README.md"
authors = [
    { name = "gqy20", email = "qingyu_ge@foxmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.71",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "rich>=13.0",
]

[project.scripts]
gk = "gk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gk"]
